<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_5sdp"
    android:background="@drawable/dialog_btn_shape"
    android:gravity="center"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/dialog_header_shape"
        android:gravity="center">

        <com.rahbarbazaar.poller.android.Utilities.CustomTextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white_gray"
            android:text="@string/error"
            android:textSize="@dimen/_15sdp" />

    </RelativeLayout>


    <com.rahbarbazaar.poller.android.Utilities.CustomTextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/_40sdp"
        android:paddingEnd="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:textColor="@color/blue"
        android:text="@string/failed_connection_to_server"
        android:textSize="@dimen/font_17" />
    <com.rahbarbazaar.poller.android.Utilities.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:textColor="@color/blue"
        android:text="@string/try_afewmin_later"
        android:textSize="@dimen/font_17" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_40"
        android:layout_marginBottom="@dimen/dimen_10"
        android:orientation="horizontal">



        <com.rahbarbazaar.poller.android.Utilities.CustomTextView
            android:id="@+id/text_close_app"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_42"
            android:layout_marginStart="@dimen/dimen_20"
            android:layout_marginEnd="@dimen/dimen_20"
            android:layout_weight="1"
            android:background="@drawable/dialog_btn_shape"
            android:gravity="center"
            android:textSize="@dimen/_14sdp"
            android:text="@string/close_app"
            android:textColor="@color/blue" />

    </LinearLayout>

</LinearLayout>