<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/white_corner_bg"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/image_dialog"
        android:layout_width="@dimen/dimen_60"
        android:layout_height="@dimen/dimen_60"
        android:layout_marginTop="@dimen/dimen_10"
        android:padding="@dimen/dimen_2"
        android:src="@drawable/comment_dialog" />

    <com.rahbarbazaar.poller.android.Utilities.CustomTextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20"
        android:text="@string/report_issue_title"
        android:textSize="@dimen/font_15" />

    <EditText
        android:id="@+id/edt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_17"
        android:layout_marginEnd="@dimen/dimen_17"
        android:layout_marginTop="@dimen/dimen_10"
        android:gravity="center"
        android:hint="@string/text_title"
        android:background="@null"
        android:textSize="@dimen/font_14" />

    <TextView
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/dimen_17"
        android:layout_marginTop="@dimen/dimen_6"
        android:background="@color/minor_gray"
        android:layout_marginEnd="@dimen/dimen_17"
        android:layout_height="1dp" />

    <EditText
        android:id="@+id/edt_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_17"
        android:layout_marginTop="@dimen/dimen_10"
        android:layout_marginEnd="@dimen/dimen_17"
        android:gravity="center"
        android:hint="@string/description_text"
        android:background="@null"
        android:textSize="@dimen/font_14" />
    <TextView
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/dimen_17"
        android:layout_marginTop="@dimen/dimen_6"
        android:background="@color/minor_gray"
        android:layout_marginEnd="@dimen/dimen_17"
        android:layout_height="1dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_15"
        android:layout_marginBottom="@dimen/dimen_8"
        android:orientation="horizontal">

        <com.rahbarbazaar.poller.android.Utilities.CustomTextView
            android:id="@+id/btn_cancel_dialog"
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen_42"
            android:layout_marginStart="@dimen/dimen_10"
            android:layout_weight="1"
            android:background="@drawable/btn_bg_grey"
            android:gravity="center"
            android:text="@string/cancel_text"
            android:textColor="@color/main_page_toolbar" />

        <com.rahbarbazaar.poller.android.Utilities.CustomTextView
            android:id="@+id/btn_send_dialog"
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen_42"
            android:layout_marginStart="@dimen/dimen_10"
            android:layout_marginEnd="@dimen/dimen_10"
            android:layout_weight="1"
            android:background="@drawable/btn_bg_dark_blue"
            android:gravity="center"
            android:text="@string/report_issue"
            android:textColor="@color/main_page_toolbar" />

    </LinearLayout>

</LinearLayout>