<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:id="@+id/survey_fragment"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/rl25"
        android:layout_height="@dimen/_53sdp">

        <com.rahbarbazaar.poller.android.Utilities.CustomTextView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/_10sdp"
            android:background="@drawable/dialog_btn_shape"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/survey_tab"
            android:textColor="@color/colorAccent1"
            android:textSize="@dimen/_15ssp" />

        <ImageView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_22sdp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/survey_header_icon"/>

    </RelativeLayout>

    <com.rahbarbazaar.poller.android.Utilities.CustomTextView
        android:id="@+id/text_no_active_survey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:layout_below="@+id/rl25"
        android:gravity="center"
        android:textColor="@color/blue"
        android:paddingBottom="@dimen/dimen_2"
        android:text="@string/no_active_survey"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:id="@+id/ll_info"
        android:background="@drawable/bg_survey_info_remaintime"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:orientation="horizontal"
        android:layout_below="@+id/text_no_active_survey">

        <com.rahbarbazaar.poller.android.Utilities.CustomTextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/txt_header_time"
            android:textColor="@color/blue"
            android:text="@string/time"/>
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="#fff"
            android:layout_weight="0.05">
        </View>
        <com.rahbarbazaar.poller.android.Utilities.CustomTextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/txt_header_score"
            android:textColor="@color/blue"
            android:text="@string/text_your_point"/>
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="#fff"
            android:layout_weight="0.05">
        </View>
        <com.rahbarbazaar.poller.android.Utilities.CustomTextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:id="@+id/txt_header_title"
            android:textColor="@color/blue"
            android:text="@string/title"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="#fff"
            android:layout_weight="0.05">
        </View>

        <com.rahbarbazaar.poller.android.Utilities.CustomTextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/txt_header_status"
            android:textColor="@color/blue"
            android:text="@string/status"/>


    </LinearLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_marginTop="@dimen/_3sdp"
        android:layout_above="@+id/rl_user_access_upgrade_survey"
        android:layout_below="@+id/ll_info"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/survey_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </android.support.v4.widget.SwipeRefreshLayout>

    <LinearLayout
        android:id="@+id/rl_user_access_upgrade_survey"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_37sdp"
        android:layout_marginStart="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_50sdp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/bg_pink1"
        android:gravity="center"
        android:visibility="gone"
        android:orientation="vertical">

        <com.rahbarbazaar.poller.android.Utilities.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_access_upgrade"
            android:textColor="@color/colorAccent1"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold" />

    </LinearLayout>


</RelativeLayout>